# snippets

./: .gitignore  CMakeLists.txt  LICENSE
Tools/: CMakeLists.txt
book/: CMakeLists.txt
book/include/: stdafx.h
book/ppcp/: CMakeLists.txt  e_01_helloworld.cpp  e_02_promise_future.cpp  e_03_dispatch_param.cpp  e_04_false_sharing.cpp  main.cpp
headonly/: refl.hpp
include/: stdafx.h
